--- a/cpp/gtest/CMakeLists.txt
+++ b/cpp/gtest/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 set(CMAKE_VERBOSE_MAKEFILE ON)
+SET (CMAKE_CXX_FLAGS "-Wno-maybe-uninitialized -Wextra")
+
 project(Parrot VERSION 1.0
         DESCRIPTION "Practice Conditional to Pol(l)ymorphism."
         LANGUAGES CXX)
